<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrapper_describe_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/cell_recipe_item"
    android:padding="10dp">

    <TableLayout
        android:id="@+id/plant_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:id="@+id/caption_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center|top"
                android:maxWidth="50dp"
                android:text="@string/aloe_item"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/caption_location_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/caption_location"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/caption_moisture_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/caption_moisture"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/caption_nutrition_text_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/caption_nutrition_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/caption_nutrition"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/caption_location_text_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/caption_effect_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/caption_effect"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:gravity="center">

            <TextView
                android:layout_weight="0.5"
                android:id="@+id/image_text_view"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:background="@drawable/item_aloe"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/name_location_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bilbo_swash_caps"
                android:gravity="center"
                android:lines="2"
                android:maxWidth="100dp"
                android:text="@string/desert"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/nutrition_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/count"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/moisture_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/count"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/effect_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bilbo_swash_caps"
                android:gravity="center"
                android:maxWidth="100dp"
                android:lines="4"
                android:layout_weight="1"
                android:text="@string/no_effect"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>